--- a/question/templates/question/t_question_mobile.html
+++ b/question/templates/question/t_question_mobile.html
@@ -13,7 +13,7 @@
 <div>
 
 
-<div class="QuestionHeader">
+<div class="QuestionHeader ScrollIntoMark">
 <div class="QuestionStatus"></div>
 <div class="Card QuestionHeader-content">
 <div class="QuestionHeader-tags">
@@ -30,8 +30,13 @@
 
 </div>
 <div class="QuestionHeader-title"></div>
-<div class="RichContent RichContent--unescapable RichContent--withMask">
-<div class="RichContent-inner"><span class="RichText CopyrightRichText-richText"></span></div>
+<div class="QuestionHeader-detail RichContent RichContent--unescapable RichContent--withMask is-collapsed">
+<div class="QuestionHeader-detail-expand">
+<div class="RichContent-inner" style="max-height:200px;"><span class="RichText CopyrightRichText-richText">{{question.2|safe}}</span></div>
+<button class="Button QuestionHeader-detail-more  ContentItem-rightButton Button--plain is-hide" type="button" style="bottom:75px;">查看问题详细描述<svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon Icon--arrow" style="height:16px;width:10px;" width="10" height="16" aria-hidden="true"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg></button>
+</div>
+<br/>
+<button class="Button QuestionHeader-detail-less ContentItem-rightButton Button--plain is-hide" type="button" style="position:relative; float:right; bottom:30px;"><span class="RichContent-collapsedText">收起问题描述</span><svg viewBox="0 0 10 6" class="Icon ContentItem-arrowIcon is-active Icon--arrow" width="10" height="16" aria-hidden="true" style="height: 16px; width: 10px;"><title></title><g><path d="M8.716.217L5.002 4 1.285.218C.99-.072.514-.072.22.218c-.294.29-.294.76 0 1.052l4.25 4.512c.292.29.77.29 1.063 0L9.78 1.27c.293-.29.293-.76 0-1.052-.295-.29-.77-.29-1.063 0z"></path></g></svg></button>
 <div class="ContentItem-actions">
 <div class="MobileQuestionButtonGroup">
 <button class="Button FollowButton Button--primary Button--green is-hide" type="button" data-follow-type="question"></button>
