--- a/static/common/main.css
+++ b/static/common/main.css
@@ -1163,4 +1163,27 @@ a.QuestionMainAction:hover{color:#228b22}
 .AnswerToolbar--close{margin-left:500px;}
 .CommentList{-webkit-box-flex:1;-ms-flex:0 0 auto;flex:0 0 auto;}
 /********************** IE ******************************/
+/********************** uploading img******************************/
+.spinner {width: 100px;height: 100px;position: relative;margin: 0px auto;margin-bottom:100px}
+.double-bounce1, .double-bounce2 {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    background-color: #67CF22;
+    opacity: 0.6;
+    position: absolute;
+    top: 0;
+    left: 0;
+    -webkit-animation: bounce 2s infinite ease-in-out;
+    animation: bounce 2s infinite ease-in-out;}
+.double-bounce2 {-webkit-animation-delay:-1s;animation-delay: -1s;} 
+@-webkit-keyframes bounce {
+  1%, 100% { -webkit-transform: scale(0.0) }
+  50% { -webkit-transform: scale(1.0) }
+}
+@keyframes bounce {
+  1%, 100% {transform: scale(0.0);-webkit-transform: scale(0.0);}
+  50% {transform: scale(1.0);-webkit-transform: scale(1.0);}
+}
+/********************** upload img loading ******************************/
 
