download app url

--- a/question/templates/question/header_mobile.html
+++ b/question/templates/question/header_mobile.html
@@ -22,7 +22,7 @@
 </div>
 {% else %}
 <div class="MobileAppHeader-actions">
-<!--<a class="MobileAppHeader-downloadLink" href="https://www.danongling.com/app?auto_download=true&amp;utm_source=zhihu&amp;utm_campaign=guest_feed&amp;utm_content=guide">下载 App</a>-->
+<a class="MobileAppHeader-downloadLink" href="">下载 App</a>
 <a class="MobileAppHeader-authLink" href="/signinup/?next=/">注册或登录</a></div>
 {% endifequal %}
 </div>
