--- a/question/templates/question/t_write_mobile.html
+++ b/question/templates/question/t_write_mobile.html
@@ -30,7 +30,7 @@
 
 <div class="WriteIndex-titleInput Input-wrapper Input-wrapper--multiline">
 <!--<textarea rows="1" class="Input" placeholder="请输入标题" style="height: 44px;"></textarea>-->
-<input type="text" name="writeTitle" class="Input" placeholder="请输入文章标题" style="height: 44px;"></input>
+<input type="text" name="writeTitle" class="Input" placeholder="请输入文章标题"></input>
 </div>
 
 <div class="Wirte-select">
