--- a/question/templates/question/t_question.html
+++ b/question/templates/question/t_question.html
@@ -178,6 +178,8 @@
         </div>
         </div>
         
+        <div class="ContentItem-time"><span>{{push_answer.pub_date|date:"Y-m-d H:i:s"}}</span></div>
+        
         <div class="RichContent RichContent--unescapable">
          <div class="RichContent-expand">
             <div class="RichContent-inner" style="max-height:400px;">
@@ -230,6 +232,7 @@
         </div>
         </div>
         </div>
+        <div class="ContentItem-time"><span>{{answer.pub_date|date:"Y-m-d H:i:s"}}</span></div>
         <div class="RichContent RichContent--unescapable">
         <div class="RichContent-expand">
         <div class="RichContent-inner" style="max-height:400px"><span class="RichText CopyrightRichText-richText">{{answer.content|safe}}</span></div>
