--- a/question/templates/question/t_question_mobile.html
+++ b/question/templates/question/t_question_mobile.html
@@ -107,6 +107,7 @@
 <div class="AuthorInfo-detail"><div class="AuthorInfo-badge">
 <div class="RichText AuthorInfo-badgeText">{{push_answer.author__userprofile__mood|safe}}</div></div></div></div></div>
 </div>
+<div class="ContentItem-time"><span>{{push_answer.pub_date|date:"Y-m-d H:i:s"}}</span></div>
 <div class="RichContent RichContent--unescapable RichContent--withMask">
 <div class="RichContent-expand">
 <div class="RichContent-inner 1RichContent-inner--collapsed" style="max-height:400px;">
@@ -147,6 +148,7 @@
 </div>
 </div>
 </div>
+<div class="ContentItem-time"><span>{{answer.pub_date|date:"Y-m-d H:i:s"}}</span></div>
 <div class="RichContent RichContent--unescapable 1is-collapsed">
 <div class="RichContent-expand">
 <div class="RichContent-inner" style="max-height:400px">
