--- a/question/templates/question/t_write_mobile.html
+++ b/question/templates/question/t_write_mobile.html
@@ -16,37 +16,41 @@
 <div class="Layout-main av-card">
 <form method="post" action="/write/">
 {% csrf_token %}
+<!--
 <div class="WriteCover-wrapper is-hide">
 <div class="WriteCover-previewWrapper WriteCover-previewWrapper--empty">
 <i class="WriteCover-uploadIcon icon-ic_phot_camera_alt"></i>
 <input type="file" class="WriteCover-uploadInput" name="upload_file" accept=".jpeg, .jpg, .png">
 </div>
 </div>
+-->
 
-<div class="WriteHeaderTitle">
-<h3 class="Write-title">写文章</h3>
-<div class="Write-subtitle">原创或装载文章与新闻</div>
+<div class="Write-step1">
+    <div class="WriteHeaderTitle">
+        <h3 class="Write-title">写文章</h3>
+        <div class="Write-subtitle">原创或装载文章与新闻</div>
+    </div>
+    <div class="WriteIndex-titleInput Input-wrapper Input-wrapper--multiline">
+        <input type="text" name="writeTitle" class="Input" placeholder="请输入文章标题"></input>
+    </div>
+    <div class="Wirte-content">
+        <textarea id="summernote_write" name="tmpWriteContent"></textarea> 
+        <input type="hidden" name="writeContent" value="">              
+    </div>
+    <div style="display:flex;justify-content:center;">
+        <button class="WriteNextButton Button Button--primary Button--green" disabled type="button">下一步</button>
+    </div>
 </div>
-
-<div class="WriteIndex-titleInput Input-wrapper Input-wrapper--multiline">
-<!--<textarea rows="1" class="Input" placeholder="请输入标题" style="height: 44px;"></textarea>-->
-<input type="text" name="writeTitle" class="Input" placeholder="请输入文章标题"></input>
+<div class="Write-step2 is-hide">
+    <div class="Wirte-select">
+        <select id="1topics_select" name="topics_selected" class="selectpicker form-control" multiple data-live-search="true" data-live-search-placeholder="搜索并添加栏目" data-max-options="5" data-style="Input-wrapper Input-wrapper--spread Input-wrapper--large" title="添加栏目">
+        </select>
+    </div>
+    <div style="display:flex;flex-direction:row;justify-content:space-around;margin:50px">
+        <button class="WriteLastButton Button Button--primary Button--green" type="button">上一步</button>
+        <button class="WritePost Button Button--primary Button--green" disabled type="button">发 表</button>
+    </div>
 </div>
-
-<div class="Wirte-select">
-    <select id="1topics_select" name="topics_selected" class="selectpicker form-control" multiple data-live-search="true" data-live-search-placeholder="搜索并添加栏目" data-max-options="5" data-style="Input-wrapper Input-wrapper--spread Input-wrapper--large" title="添加栏目">
-    </select>
-</div>
-
-<div class="Wirte-content">
-<textarea id="summernote_write" name="tmpWriteContent"></textarea> 
-<input type="hidden" name="writeContent" value="">              
-</div>
-
-<div style="display:flex;justify-content:center;">
-<button class="WritePost Button Button--primary Button--green" disabled type="button">发表</button>
-</div>
-
 </form>
 </div>
 </div>     
