--- a/question/templates/question/t_search_mobile.html
+++ b/question/templates/question/t_search_mobile.html
@@ -38,7 +38,7 @@
 <div class="Topic-bar">
 <ul role="tablist" class="Tabs Topic-tabs">
 <li role="tab" class="Tabs-item Tabs-item--noMeta"><div class="Tabs-link" data-search-type="all">综合</div></li>
-<li role="tab" class="Tabs-item Tabs-item--noMeta"><div class="Tabs-link" data-search-type="question">问题</div></li>
+<li role="tab" class="Tabs-item Tabs-item--noMeta"><div class="Tabs-link" data-search-type="content">内容</div></li>
 <li role="tab" class="Tabs-item Tabs-item--noMeta"><div class="Tabs-link" data-search-type="people">用户</div></li>
 <li role="tab" class="Tabs-item Tabs-item--noMeta"><div class="Tabs-link" data-search-type="topic">栏目</div></li>
 </ul>
