--- a/question/templates/question/t_search_mobile.html
+++ b/question/templates/question/t_search_mobile.html
@@ -15,12 +15,12 @@
 
 <div class="Card">
 <div role="search" class="MobileSearchPage">
-<button class="Button--primary Button--green" style="float:right; width:62px; height:32px; line-height:30px; margin-top:7px; margin-right:6px; border:1px solid; border-radius:4px;" data-toggle="modal" data-target="#askModal">提问</button>
+<button id="search_button" class="Button--primary Button--green" style="float:right; width:62px; height:32px; line-height:30px; margin-top:7px; margin-right:6px; border:1px solid; border-radius:4px;">搜索</button>
 <div role="search" style="position:absolute; width:auto;left:0px;right:73px;float:none;margin:7px 0 0 10px;">
 <div style="padding-right:30px;width:100%;height:33px;">
 <!--<input type="hidden" name="type" value="content"><label for="q" class="hide-text">大农令搜索</label>-->
 <input type="text" style="" id="searchInput" name="q" autocomplete="off" value="" maxlength="100" placeholder="搜索你感兴趣的内容..." role="combobox" aria-autocomplete="list">
-<button id="search_button" type="button" style="position:absolute; top:0;right:0;background:0 0;border:0;width:30px;height:100%;">
+<button id="1search_button" type="button" style="position:absolute; top:0;right:0;background:0 0;border:0;width:30px;height:100%;">
 <!--<span class="hide-text">搜索</span>-->
 <span><svg viewBox="0 0 16 16" class="Icon Icon--search" style="height:16px;width:16px;fill:#afbdcf" width="16" height="16" aria-hidden="true"><title></title><g><path d="M12.054 10.864c.887-1.14 1.42-2.57 1.42-4.127C13.474 3.017 10.457 0 6.737 0S0 3.016 0 6.737c0 3.72 3.016 6.737 6.737 6.737 1.556 0 2.985-.533 4.127-1.42l3.103 3.104c.765.46 1.705-.37 1.19-1.19l-3.103-3.104zm-5.317.925c-2.786 0-5.053-2.267-5.053-5.053S3.95 1.684 6.737 1.684 11.79 3.95 11.79 6.737 9.522 11.79 6.736 11.79z"></path></g></svg></span>
 </button>
