--- a/question/templates/question/t_article_mobile.html
+++ b/question/templates/question/t_article_mobile.html
@@ -14,7 +14,7 @@
 <!--<img class="TitleImage" src="" alt="">-->
 <div class="Post-Author Post-Author-Mobile">
 <div class="AuthorInfo">
-<span class="UserLink AuthorInfo-avatarWrapper"><a class="UserLink-link" target="_blank" href=""><img class="Avatar Avatar--round AuthorInfo-avatar" width="34" height="34" src="" alt=""></a></span>
+<span class="UserLink AuthorInfo-avatarWrapper"><a class="UserLink-link" target="_blank" href="" data-author-id="{{article.author__id}}"><img class="Avatar Avatar--round AuthorInfo-avatar" width="34" height="34" src="" alt=""></a></span>
 <div class="AuthorInfo-content">
 <div class="AuthorInfo-head"><span class="UserLink AuthorInfo-name"><a class="UserLink-link" target="_blank" href=""></a></span></div>
 <div class="AuthorInfo-detail"><div class="AuthorInfo-badge"><div class="RichText ztext AuthorInfo-badgeText"></div></div></div>
