--- a/question/templates/question/head.html
+++ b/question/templates/question/head.html
@@ -3,6 +3,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=11">
 <meta charset="utf-8">
 <title></title>
+<link rel="shortcut icon" href="/static/common/favicon.ico" type="image/x-icon">
 <!--
 <link rel="stylesheet" href="{% static 'common/bootstrap-3.3.7/css/bootstrap.min.css' %}">
 <link rel="stylesheet" href="{% static 'common/bootstrap-select-1.12.4/css/bootstrap-select.min.css' %}">
