--- a/question/templates/question/head_mobile.html
+++ b/question/templates/question/head_mobile.html
@@ -2,6 +2,7 @@
 {%load static %}
 <meta charset="utf-8">
 <title></title>
+<link rel="shortcut icon" href="/static/common/favicon.ico" type="image/x-icon">
 <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover">
 <meta name="renderer" content="webkit">
 <meta name="force-rendering" content="webkit">
