add android download svg

--- a/question/templates/question/header_mobile.html
+++ b/question/templates/question/header_mobile.html
@@ -22,7 +22,7 @@
 </div>
 {% else %}
 <div class="MobileAppHeader-actions">
-<a class="MobileAppHeader-downloadLink" href="">下载 App</a>
+<a class="MobileAppHeader-downloadLink is-hide" href="">下载 App</a>
 <a class="MobileAppHeader-authLink" href="/signinup/?next=/">注册或登录</a></div>
 {% endifequal %}
 </div>
