--- a/question/templates/question/t_er_active_mobile.html
+++ b/question/templates/question/t_er_active_mobile.html
@@ -12,13 +12,14 @@
 <main role="main" class="App-main" data-module="home" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}","er_id":"{{er.id}}","er_name":"{{er.first_name}}"
 ,"er_avatar":"{{er.userprofile__avatar}}","er_mood":"{{er.userprofile__mood}}","er_intro":"{{er.userprofile__intro}}","er_sexual":"{{er.userprofile__sexual}}","er_residence":"{{er.userprofile__residence}}"
 ,"er_job":"{{er.userprofile__job}}","command":"{{command}}","subcmd":"{{subcmd}}"}'   data-dfs-ext='{"question_nums":"{{er.userprofile__question_nums}}","article_nums":"{{er.userprofile__article_nums}}","answer_nums":"{{er.userprofile__answer_nums}}"
-,"followto_nums":"{{er.userprofile__followto_nums}}","follower_nums":"{{er.userprofile__follower_nums}}","followtopic_nums":"{{er.userprofile__followtopic_nums}}","followquestion_nums":"{{er.userprofile__followquestion_nums}}"}'>
+,"followto_nums":"{{er.userprofile__followto_nums}}","follower_nums":"{{er.userprofile__follower_nums}}","followtopic_nums":"{{er.userprofile__followtopic_nums}}","followquestion_nums":"{{er.userprofile__followquestion_nums}}","contribution":"{{er.userprofile__contribution}}"}'>
 <div class="Profile">
 <div class="Card">
 <div class="Profile-intro">
 <img class="Profile-avatar" src="" alt="">
 <div class="Profile-name"></div>
 <div class="RichText Profile-headline"></div>
+<div class="RichText Profile-contribution" style="color:#daa520">贡献值: 100  |  股份: 0.00001%</div>
 <div class="MobileQuestionButtonGroup" style="margin:12px auto;">
 <button class="Button ProfileEditButton Button--primary Button--green">编辑个人资料</button>
 <button class="Button FollowButton ProfileFollowButton Button--primary Button--green" type="button" data-follow-type="people"></button>
