--- a/question/templates/question/t_ask_mobile.html
+++ b/question/templates/question/t_ask_mobile.html
@@ -41,6 +41,9 @@
         </div>
         <div class="QuestionAsk-step2 is-hide">
             <div class="QuestionAsk-section">
+                <div class="Ask-subtitle">把问题添加到相关栏目</div>
+            </div>
+            <div class="QuestionAsk-section">
                 <div class="TagInput TagInput--empty">
                     <select id="topics_select" name="topics_selected" class="selectpicker show-menu-arrow form-control" multiple data-live-search="true" data-live-search-placeholder="搜索并添加栏目" data-max-options="5" data-style="Input-wrapper Input-wrapper--spread Input-wrapper--large" title="添加栏目"></select>
                 </div>
