--- a/question/templates/question/t_write_mobile.html
+++ b/question/templates/question/t_write_mobile.html
@@ -28,7 +28,7 @@
 <div class="Write-step1">
     <div class="WriteHeaderTitle">
         <h3 class="Write-title">写文章</h3>
-        <div class="Write-subtitle">原创或装载文章与新闻</div>
+        <div class="Write-subtitle">原创或转载文章与新闻</div>
     </div>
     <div class="WriteIndex-titleInput Input-wrapper Input-wrapper--multiline">
         <input type="text" name="writeTitle" class="Input" placeholder="请输入文章标题"></input>
@@ -42,6 +42,9 @@
     </div>
 </div>
 <div class="Write-step2 is-hide">
+    <div class="WriteHeaderTitle">
+        <div class="Write-subtitle">把文章添加到相关栏目</div>
+    </div>
     <div class="Wirte-select">
         <select id="1topics_select" name="topics_selected" class="selectpicker form-control" multiple data-live-search="true" data-live-search-placeholder="搜索并添加栏目" data-max-options="5" data-style="Input-wrapper Input-wrapper--spread Input-wrapper--large" title="添加栏目">
         </select>
