imporve,add topic select "多选"

--- a/question/templates/question/t_write.html
+++ b/question/templates/question/t_write.html
@@ -27,7 +27,7 @@
 </div>
 
 <div class="Wirte-select">
-    <select id="1topics_select" name="topics_selected" class="selectpicker form-control" multiple data-live-search="true" data-live-search-placeholder="搜索栏目" data-max-options="5" data-style="Input-wrapper Input-wrapper--spread Input-wrapper--large" title="添加栏目">
+    <select id="1topics_select" name="topics_selected" class="selectpicker form-control" multiple data-live-search="true" data-live-search-placeholder="搜索栏目" data-max-options="5" data-style="Input-wrapper Input-wrapper--spread Input-wrapper--large" title="添加栏目(多选)">
     </select>
 </div>
 
