--- a/question/templates/question/t_write_mobile.html
+++ b/question/templates/question/t_write_mobile.html
@@ -46,7 +46,7 @@
         <div class="Write-subtitle">把文章添加到相关栏目</div>
     </div>
     <div class="Wirte-select">
-        <select id="1topics_select" name="topics_selected" class="selectpicker form-control" multiple data-live-search="true" data-live-search-placeholder="搜索并添加栏目" data-max-options="5" data-style="Input-wrapper Input-wrapper--spread Input-wrapper--large" title="添加栏目">
+        <select id="1topics_select" name="topics_selected" class="selectpicker form-control" multiple data-live-search="true" data-live-search-placeholder="搜索并添加栏目" data-max-options="5" data-style="Input-wrapper Input-wrapper--spread Input-wrapper--large" title="添加栏目(多选)">
         </select>
     </div>
     <div style="display:flex;flex-direction:row;justify-content:space-around;margin:50px">
