--- a/question/templates/question/ask_modal_mobile.html
+++ b/question/templates/question/ask_modal_mobile.html
@@ -17,7 +17,7 @@
             
                             <div class="QuestionAsk-section">
                                 <div class="TagInput TagInput--empty">
-                                            <select id="topics_select" name="topics_selected" class="selectpicker show-menu-arrow form-control" multiple data-live-search="true" data-live-search-placeholder="搜索并添加栏目" data-max-options="5" data-style="Input-wrapper Input-wrapper--spread Input-wrapper--large" title="添加栏目"></select>
+                                            <select id="topics_select" name="topics_selected" class="selectpicker show-menu-arrow form-control" multiple data-live-search="true" data-live-search-placeholder="搜索并添加栏目" data-max-options="5" data-style="Input-wrapper Input-wrapper--spread Input-wrapper--large" title="添加栏目(多选)"></select>
                                 </div>
                             </div>
 
