--- a/question/templates/question/t_ask_mobile.html
+++ b/question/templates/question/t_ask_mobile.html
@@ -45,7 +45,7 @@
             </div>
             <div class="QuestionAsk-section">
                 <div class="TagInput TagInput--empty">
-                    <select id="topics_select" name="topics_selected" class="selectpicker show-menu-arrow form-control" multiple data-live-search="true" data-live-search-placeholder="搜索并添加栏目" data-max-options="5" data-style="Input-wrapper Input-wrapper--spread Input-wrapper--large" title="添加栏目"></select>
+                    <select id="topics_select" name="topics_selected" class="selectpicker show-menu-arrow form-control" multiple data-live-search="true" data-live-search-placeholder="搜索并添加栏目" data-max-options="5" data-style="Input-wrapper Input-wrapper--spread Input-wrapper--large" title="添加栏目(多选)"></select>
                 </div>
             </div>              
             <div style="display:flex;flex-direction:row;justify-content:space-around;margin:50px">
