--- a/question/templates/question/t_business_post.html
+++ b/question/templates/question/t_business_post.html
@@ -12,151 +12,92 @@
 
 <!--------------------main---------------------->
 <main role="main" class="App-main" data-module="business-post" data-dfs-main='{"logged":"{{logged}}","user_id":"{{user.id}}","user_name":"{{user.first_name}}"}'>
-<div class="ContentLayout">
-<div class="ContentLayout-mainColumn">
-
-<!--
-<div class="Card">
-
-<div class="SearchBar">
-<div class="SearchBar-toolWrapper">
-<div class="SearchBar-input Input-wrapper Input-wrapper--grey">
-<input id="businessSearchInput" type="text" maxlength="100" autocomplete="off" role="combobox" aria-expanded="false" aria-autocomplete="list" aria-haspopup="true" class="SearchPopover Input" placeholder="搜索关键字..." value="" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
-<div class="Input-after"><button id="1search_button" aria-label="搜索" type="button" class="Button SearchBar-searchIcon Button--primary"><svg viewBox="0 0 16 16" class="Icon Icon--search" width="16" height="16" aria-hidden="true" style="height: 16px; width: 16px;"><title></title><g><path d="M12.054 10.864c.887-1.14 1.42-2.57 1.42-4.127C13.474 3.017 10.457 0 6.737 0S0 3.016 0 6.737c0 3.72 3.016 6.737 6.737 6.737 1.556 0 2.985-.533 4.127-1.42l3.103 3.104c.765.46 1.705-.37 1.19-1.19l-3.103-3.104zm-5.317.925c-2.786 0-5.053-2.267-5.053-5.053S3.95 1.684 6.737 1.684 11.79 3.95 11.79 6.737 9.522 11.79 6.736 11.79z"></path></g></svg></button></div>
-</div>
-</div>
-<button id="businessSearchButton" type="button" class="Button Button--primary Button--green is-hide">搜索</button>
-<button type="button" class="Button PostBusinessButton Button--primary Button--green" data-toggle="modal" data-target="#postBusiness">发布信息</button>
+<div class="Layout av-cardBackground">
+<div class="Layout-main av-card">
+<form method="post" action="/business/post/">
+{% csrf_token %}
+<div class="BusinessPostHeader">
+<h3 class="BusinessPostHeader-title">填写信息</h3>
 </div>
 
+<div class="BusinessPost-content">
+    <div class="1QuestionAsk">
+        <div class="BusinessPost-section BusinessPost-DetailSection">信息类别：
+            <div class="BusinessPost-title">
+                <label><input type="radio" name="type" value="sell" checked>我要出售</label>&nbsp;<label><input type="radio" name="business-type" value="buy">我要求购</label>
+            </div>
+        </div>
+        
+        <div class="BusinessPost-section BusinessPost-DetailSection">地点：
+            <div class="BusinessPost-addr">
+
+                <div id="province">
+                <select id="province_select" onchange="addrSelectChange('province')">
+                <option value="000000">全国</option>
+                </select>
+                </div>
+
+                <div id="city">
+                <select id="city_select" onchange="addrSelectChange('city')">
+                <option value="000000">全部</option>
+                </select>
+                </div>
+
+                <div id="district">
+                <select id="district_select" onchange="addrSelectChange('district')">
+                <option value="000000">全部</option>
+                </select>
+                </div>
+
+                <div id="addr-detail" class="is-hide">
+                    <input name="addr_detail" type="text" disabled placeholder="乡镇,村(可选)">
+                </div>
+                
+                <input type="hidden" name="addr" value="">
+                <input type="hidden" name="addr_value" value="">
+            </div>
+        </div>
+        
+        <div class="BusinessPost-section">
+            <div class="BusinessPost-title">
+                <div class="Input-wrapper Input-wrapper--spread Input-wrapper--multiline Input-wrapper--large">
+                    <textarea required="" name="title" rows="1" autocomplete="off" role="combobox" class="Input" placeholder="信息标题"></textarea>
+                </div>
+            </div>
+        </div>
+        
+
+        <div class="BusinessPost-section BusinessPost-DetailSection">
+            <div class="BusinessPost-detail">
+                <div class="Input-wrapper Input-wrapper--spread Input-wrapper--multiline Input-wrapper--large">
+                    <textarea name="detail" rows="5" autocomplete="off" role="combobox" class="Input" placeholder="信息详细描述（可选）"></textarea>
+                </div>
+                <!--<textarea id="1summernote_question" name="tmpDetail" rows="5" cols="70" 1maxlength="160"></textarea>-->
+                <!--<input type="hidden" name="detail" value="">-->
+            </div>
+        </div>
+        
+        <div class="BusinessPost-section BusinessPost-DetailSection">添加图片(最多4张)：
+            <input type="hidden" name="pictures" value="">
+        </div>
+        
+        <div class="BusinessPost-section">
+            <div class="BusinessPost-contact">
+                <div class="Input-wrapper Input-wrapper--spread Input-wrapper--multiline Input-wrapper--large">
+                    <textarea required="" name="contact" rows="1" autocomplete="off" role="combobox" class="Input" placeholder="联系方式（名字，电话等）"></textarea>
+                </div>
+            </div>
+        </div>
+           
+        <div style="display:flex;justify-content:center;">
+            <button class="BusinessPost Button Button--primary Button--green" disabled type="button">发布信息</button>
+        </div>
+    </div>
 </div>
 
-<div class="Card">
-<div class="Card-header">
-<div class="Card-headerText">
-<a target="_blank" href="/er/2/following/topics/">选择地区</a> 
-</div>
-</div>
-
-<div class="Card-section">
-<div class="Tag current">
-<span class="Tag-content">
-<a class="1TopicLink" href="#1">数学</a>
-</span>
-</div>
-<div class="Tag">
-<span class="Tag-content">
-<a class="1TopicLink" href="#3">英语</a>
-</span>
-</div>
-</div>
-
-<div class="Card-section">
-<div class="Tag current">
-<span class="Tag-content">
-<a class="1TopicLink" href="#1">数学</a>
-</span>
-</div>
-<div class="Tag">
-<span class="Tag-content">
-<a class="1TopicLink" href="#3">英语</a>
-</span>
-</div>
-</div>
-
-<div class="Card-section">
-<div class="Tag current">
-<span class="Tag-content">
-<a class="1TopicLink" href="#1">数学</a>
-</span>
-</div>
-<div class="Tag">
-<span class="Tag-content">
-<a class="1TopicLink" href="#3">英语</a>
-</span>
-</div>
-</div>
-
-</div>
--->
-
-<div class="Card BusinessHead">
-
-<div class="Card-header">
-<div class="Card-headerText">
-<span>请选择区域><span id='local'></span></span>
-</div>
-<a type="button" class="Button PostBusinessButton Button--primary Button--green" href="/business_post/">免费发布信息</a>
-</div>
-
-<section id="selection">
-<div>
-   
-<dl class="secitem">
-<dt>省份：</dt>
-<dd id="provinces">
-<a class="select select-province" href="javascript:;" data-addr-value="0">全国</a>
-</dd>
-</dl>
-
-<dl class="secitem">
-<dt>城市：</dt>
-<dd id="citys">   
-<a class="select select-city" href="javascript:;" data-addr-value="0">全省</a>
-</dd>
-</dl>
-
-<dl class="secitem">
-<dt>地区：</dt>
-<dd id="districts">   
-<a class="select select-district" href="javascript:;" data-addr-value="0">全市</a>
-</dd>
-</dl>
-
-
-<div id="SearchForm" class="sale_search clearfix_z" style="border-bottom: 0px;">
-<div class="SearchBar">
-<div class="SearchBar-toolWrapper">
-<div class="SearchBar-input Input-wrapper Input-wrapper--grey">
-<input id="businessSearchInput" type="text" maxlength="100" autocomplete="off" role="combobox" aria-expanded="false" aria-autocomplete="list" aria-haspopup="true" class="SearchPopover Input" placeholder="搜索关键字..." value="" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
-<div class="Input-after"><button id="1search_button" aria-label="搜索" type="button" class="Button SearchBar-searchIcon Button--primary"><svg viewBox="0 0 16 16" class="Icon Icon--search" width="16" height="16" aria-hidden="true" style="height: 16px; width: 16px;"><title></title><g><path d="M12.054 10.864c.887-1.14 1.42-2.57 1.42-4.127C13.474 3.017 10.457 0 6.737 0S0 3.016 0 6.737c0 3.72 3.016 6.737 6.737 6.737 1.556 0 2.985-.533 4.127-1.42l3.103 3.104c.765.46 1.705-.37 1.19-1.19l-3.103-3.104zm-5.317.925c-2.786 0-5.053-2.267-5.053-5.053S3.95 1.684 6.737 1.684 11.79 3.95 11.79 6.737 9.522 11.79 6.736 11.79z"></path></g></svg></button></div>
-</div>
-</div>
-<button id="businessSearchButton" type="button" class="Button Button--primary Button--green 1is-hide">搜索</button>
-</div>
-<!--
-<form id="search_loc" action="" method="get">
-<span class="search_input">
-<input class="but-wd" value="请输入关键字" maxlength="40" fdv="" id="keyword1" name="b_q" para="key" autocomplete="off">
-</span>
-<span class="selfcata"><input type="submit" id="searchbtn1" class="search_on" value="搜本类"></span>
-<span class="selfcata" id="search_all"><input type="button" value="搜全站"></span>
 </form>
--->
 </div>
-
-
-<!--
-<div class="SearchBar" style="clear:both;">
-<div class="SearchBar-toolWrapper">
-<div class="SearchBar-input Input-wrapper Input-wrapper--grey">
-<input id="businessSearchInput" type="text" maxlength="100" autocomplete="off" role="combobox" aria-expanded="false" aria-autocomplete="list" aria-haspopup="true" class="SearchPopover Input" placeholder="搜索关键字..." value="" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
-<div class="Input-after"><button id="1search_button" aria-label="搜索" type="button" class="Button SearchBar-searchIcon Button--primary"><svg viewBox="0 0 16 16" class="Icon Icon--search" width="16" height="16" aria-hidden="true" style="height: 16px; width: 16px;"><title></title><g><path d="M12.054 10.864c.887-1.14 1.42-2.57 1.42-4.127C13.474 3.017 10.457 0 6.737 0S0 3.016 0 6.737c0 3.72 3.016 6.737 6.737 6.737 1.556 0 2.985-.533 4.127-1.42l3.103 3.104c.765.46 1.705-.37 1.19-1.19l-3.103-3.104zm-5.317.925c-2.786 0-5.053-2.267-5.053-5.053S3.95 1.684 6.737 1.684 11.79 3.95 11.79 6.737 9.522 11.79 6.736 11.79z"></path></g></svg></button></div>
-</div>
-</div>
-<button id="businessSearchButton" type="button" class="Button Button--primary Button--green is-hide">搜索</button>
-<button type="button" class="Button PostBusinessButton Button--primary Button--green" data-toggle="modal" data-target="#postBusiness">发布信息</button>
-</div>
--->
-
-<div class="selectResult clearfix" id="selected" style="display: none;"><div class="barct clearfix"></div></div>
-</div>
-</section>
-
-</div>
-
-</div>
-</div>
+</div> 
 </main>
 <!--------------------main end-------------------->
 <!-- ask（Modal） -->
