--- a/static/common/business.css
+++ b/static/common/business.css
@@ -3,6 +3,29 @@
     padding:0;
 }
 
+.BusinessPostHeader-title {
+    margin-top: 20px;
+    font-size: 24px;
+    font-weight: 500;
+    color: #1a1a1a;
+    text-align: center;
+}
+
+.BusinessPost-content {
+    padding: 0 5px 20px;
+    margin-top: 20px;
+    line-height: 1.7;
+    opacity: 1;
+}
+
+.QuestionAsk-section.QuestionAsk-DetailSection {
+    margin-top: 24px;
+}
+
+.QuestionAsk-section {
+    margin-bottom: 12px;
+}
+
 #selection {
     border: solid 1px #ddd;
     margin-left: auto;
