--- a/question/templates/question/t_businesses.html
+++ b/question/templates/question/t_businesses.html
@@ -15,71 +15,6 @@
 <div class="ContentLayout">
 <div class="ContentLayout-mainColumn">
 
-<!--
-<div class="Card">
-
-<div class="SearchBar">
-<div class="SearchBar-toolWrapper">
-<div class="SearchBar-input Input-wrapper Input-wrapper--grey">
-<input id="businessSearchInput" type="text" maxlength="100" autocomplete="off" role="combobox" aria-expanded="false" aria-autocomplete="list" aria-haspopup="true" class="SearchPopover Input" placeholder="搜索关键字..." value="" data-toggle="popover" data-placement="bottom" data-trigger="manual" data-content="null" data-html="true" data-container="body">
-<div class="Input-after"><button id="1search_button" aria-label="搜索" type="button" class="Button SearchBar-searchIcon Button--primary"><svg viewBox="0 0 16 16" class="Icon Icon--search" width="16" height="16" aria-hidden="true" style="height: 16px; width: 16px;"><title></title><g><path d="M12.054 10.864c.887-1.14 1.42-2.57 1.42-4.127C13.474 3.017 10.457 0 6.737 0S0 3.016 0 6.737c0 3.72 3.016 6.737 6.737 6.737 1.556 0 2.985-.533 4.127-1.42l3.103 3.104c.765.46 1.705-.37 1.19-1.19l-3.103-3.104zm-5.317.925c-2.786 0-5.053-2.267-5.053-5.053S3.95 1.684 6.737 1.684 11.79 3.95 11.79 6.737 9.522 11.79 6.736 11.79z"></path></g></svg></button></div>
-</div>
-</div>
-<button id="businessSearchButton" type="button" class="Button Button--primary Button--green is-hide">搜索</button>
-<button type="button" class="Button PostBusinessButton Button--primary Button--green" data-toggle="modal" data-target="#postBusiness">发布信息</button>
-</div>
-
-</div>
-
-<div class="Card">
-<div class="Card-header">
-<div class="Card-headerText">
-<a target="_blank" href="/er/2/following/topics/">选择地区</a> 
-</div>
-</div>
-
-<div class="Card-section">
-<div class="Tag current">
-<span class="Tag-content">
-<a class="1TopicLink" href="#1">数学</a>
-</span>
-</div>
-<div class="Tag">
-<span class="Tag-content">
-<a class="1TopicLink" href="#3">英语</a>
-</span>
-</div>
-</div>
-
-<div class="Card-section">
-<div class="Tag current">
-<span class="Tag-content">
-<a class="1TopicLink" href="#1">数学</a>
-</span>
-</div>
-<div class="Tag">
-<span class="Tag-content">
-<a class="1TopicLink" href="#3">英语</a>
-</span>
-</div>
-</div>
-
-<div class="Card-section">
-<div class="Tag current">
-<span class="Tag-content">
-<a class="1TopicLink" href="#1">数学</a>
-</span>
-</div>
-<div class="Tag">
-<span class="Tag-content">
-<a class="1TopicLink" href="#3">英语</a>
-</span>
-</div>
-</div>
-
-</div>
--->
-
 <div class="Card BusinessHead">
 
 <div class="Card-header">
@@ -153,6 +88,19 @@
 </div>
 </section>
 
+</div>
+
+<div class="Card">
+<div class="1Topic-bar">
+<ul role="tablist" class="Tabs Businesses-tabs">
+<!--append-->  
+    <li role="tab" class="Tabs-item Tabs-item--noMeta"><a class="Tabs-link is-active" data-business-type="all" href="javascript:;">全部</a ></li>
+    <li role="tab" class="Tabs-item Tabs-item--noMeta"><a class="Tabs-link" data-business-type="sell" href="javascript:;">出售</a></li>
+    <li role="tab" class="Tabs-item Tabs-item--noMeta"><a class="Tabs-link" data-business-type="buy" href="javascript:;">求购</a></li>
+</ul>
+</div>
+<div class="Sticky" style="margin:10px 0px;border-top: 1px solid #e7eaf1;"></div>
+<div id="appendArea" class="List"></div>
 </div>
 
 </div>
