--- a/question/templates/question/t_business.html
+++ b/question/templates/question/t_business.html
@@ -1,10 +1,10 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-theme="light" data-focus-method="pointer" style="">
+{% include 'question/head.html' %}
 {%load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'common/business.css' %}">
 <script src="{% static 'common/citys.js' %}"></script>
 <script src="{% static 'common/business.js' %}"></script>
-{% include 'question/head.html' %}
 <body class="Entry-body" style="background-color:#fff">
 {% include 'question/header.html' %}
 
@@ -50,6 +50,9 @@
 <div class="RichText ztext Post-RichText" style="1white-space: pre;">
 {{businessInfo.detail}}
 </div>
+</div>
+
+<div id="business-pictures" data-pictures="{{businessInfo.pictures}}">
 </div>
 
 <div style="color:red;font-size:16px;margin-top:10px;">
