--- a/question/templates/question/t_business_post.html
+++ b/question/templates/question/t_business_post.html
@@ -1,10 +1,10 @@
 ﻿<!DOCTYPE html>
 <html lang="zh" data-hairline="true" data-theme="light" data-focus-method="pointer" style="">
+{% include 'question/head.html' %}
 {%load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'common/business.css' %}">
 <script src="{% static 'common/citys.js' %}"></script>
 <script src="{% static 'common/business.js' %}"></script>
-{% include 'question/head.html' %}
 <body class="Entry-body" style="background-color:#fff">
 {% include 'question/header.html' %}
 
@@ -22,30 +22,30 @@
 
 <div class="BusinessPost-content">
     <div class="1QuestionAsk">
-        <div class="BusinessPost-section BusinessPost-DetailSection">信息类别：
-            <div class="BusinessPost-title">
-                <label><input type="radio" name="type" value="sell" checked>我要出售</label>&nbsp;<label><input type="radio" name="business-type" value="buy">我要求购</label>
+        <div class="BusinessPost-section BusinessPost-DetailSection">类别：
+            <div class="BusinessPost-title" style="padding:0 0 0 10px;">
+                <label><input type="radio" name="type" value="sell" checked>我要出售</label>&nbsp;&nbsp;&nbsp;<label><input type="radio" name="type" value="buy">我要求购</label>
             </div>
         </div>
         
         <div class="BusinessPost-section BusinessPost-DetailSection">地点：
-            <div class="BusinessPost-addr">
+            <div class="BusinessPost-addr" style="padding:0 0 10px 10px;">
 
-                <div id="province">
-                <select id="province_select" onchange="addrSelectChange('province')">
-                <option value="000000">全国</option>
+                <div id="province" style="float:left;">
+                <select id="province_select" 1onchange="addrSelectChange('province')">
+                <option value="000000">请选择省份</option>
                 </select>
                 </div>
 
-                <div id="city">
-                <select id="city_select" onchange="addrSelectChange('city')">
-                <option value="000000">全部</option>
+                <div id="city" style="float:left;padding:0 10px 0 10px;">
+                <select id="city_select" 1onchange="addrSelectChange('city')">
+                <option value="000000">请选择城市（全部）</option>
                 </select>
                 </div>
 
                 <div id="district">
-                <select id="district_select" onchange="addrSelectChange('district')">
-                <option value="000000">全部</option>
+                <select id="district_select" 1onchange="addrSelectChange('district')">
+                <option value="000000">请选择地区（全部）</option>
                 </select>
                 </div>
 
@@ -58,7 +58,7 @@
             </div>
         </div>
         
-        <div class="BusinessPost-section">
+        <div class="BusinessPost-section" style="padding:0 0 10px 0;">
             <div class="BusinessPost-title">
                 <div class="Input-wrapper Input-wrapper--spread Input-wrapper--multiline Input-wrapper--large">
                     <textarea required="" name="title" rows="1" autocomplete="off" role="combobox" class="Input" placeholder="信息标题"></textarea>
@@ -67,7 +67,7 @@
         </div>
         
 
-        <div class="BusinessPost-section BusinessPost-DetailSection">
+        <div class="BusinessPost-section BusinessPost-DetailSection" style="padding:0 0 10px 0;">
             <div class="BusinessPost-detail">
                 <div class="Input-wrapper Input-wrapper--spread Input-wrapper--multiline Input-wrapper--large">
                     <textarea name="detail" rows="5" autocomplete="off" role="combobox" class="Input" placeholder="信息详细描述（可选）"></textarea>
@@ -77,8 +77,15 @@
             </div>
         </div>
         
-        <div class="BusinessPost-section BusinessPost-DetailSection">添加图片(最多4张)：
+        <div class="BusinessPost-section BusinessPost-DetailSection" style="padding:0 0 10px 0;">
+            <div style="float:left;">添加图片(最多4张)：</div>
+            <div style="padding:0 0 0 10px;">
+                <button id="business-picture-select" type="button"><svg  viewBox="0 0 32 32" width="24" height="24"><path d="M29.996 4c0.001 0.001 0.003 0.002 0.004 0.004v23.993c-0.001 0.001-0.002 0.003-0.004 0.004h-27.993c-0.001-0.001-0.003-0.002-0.004-0.004v-23.993c0.001-0.001 0.002-0.003 0.004-0.004h27.993zM30 2h-28c-1.1 0-2 0.9-2 2v24c0 1.1 0.9 2 2 2h28c1.1 0 2-0.9 2-2v-24c0-1.1-0.9-2-2-2v0z"></path><path d="M26 9c0 1.657-1.343 3-3 3s-3-1.343-3-3 1.343-3 3-3 3 1.343 3 3z"></path><path d="M28 26h-24v-4l7-12 8 10h2l7-6z"></path></svg><span style="font-size:12px;color:#666;">选择图片</span></button>
+                <input id="business-picture-input" type="file" accept="image/png,image/jpeg" style="display:none;">
+            </div>
             <input type="hidden" name="pictures" value="">
+            <div id="business-pictures">
+            </div>
         </div>
         
         <div class="BusinessPost-section">
